--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore ."
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "db:prod": "tsx ./scripts/prod.ts"
   },
   "author": {
     "name": "Edieson Dela Torre"
@@ -48,7 +49,6 @@
     "html",
     "css"
   ],
-  
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
     "@neondatabase/serverless": "^0.9.5",
